# Copyright 2022-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('cxx', type: 'boolean', value: true, yield: true,
       description: 'Build C++ components')

option('docs', type: 'feature', value: 'auto', yield: true,
       description: 'Build documentation')

option('lv2dir', type: 'string', value: '', yield: true,
       description: 'LV2 bundle installation directory')

option('strict', type: 'boolean', value: false, yield: true,
       description: 'Enable ultra-strict warnings')

option('tests', type: 'feature', value: 'auto', yield: true,
       description: 'Build tests')

option('tools', type: 'feature', value: 'auto', yield: true,
       description: 'Build command line utilities')

