# Copyright 2022-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('cxx', type: 'boolean', yield: true,
       description: 'Build C++ components')

option('docs', type: 'feature', yield: true,
       description: 'Build documentation')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('lv2dir', type: 'string', value: '', yield: true,
       description: 'LV2 bundle installation directory')

option('tests', type: 'feature', yield: true,
       description: 'Build tests')

option('tools', type: 'feature', yield: true,
       description: 'Build command line utilities')

