# Copyright 2022-2025 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('cxx', type: 'boolean',
       description: 'Build C++ components')

option('docs', type: 'feature',
       description: 'Build documentation')

option('lint', type: 'boolean', value: false,
       description: 'Run code quality checks')

option('lv2dir', type: 'string', value: '',
       description: 'LV2 bundle installation directory')

option('plugins', type: 'feature',
       description: 'Build example plugins')

option('tests', type: 'feature',
       description: 'Build tests')

option('tools', type: 'feature',
       description: 'Build command line utilities')

